[package]
name = "libgpiod"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = ">=0.2.39"
libgpiod-sys = { path = "libgpiod-sys" }
thiserror = "1.0"
vmm-sys-util = "=0.9.0"

[dev-dependencies]
libgpiod-sys = { path = "libgpiod-sys", features = ["gpiosim"] }
